# src/models/Driver.js
@@ -83,6 +83,10 @@ const driverSchema = new mongoose.Schema({
   isVerified: {
     type: Boolean,
     default: false
+  },
+  fcmToken: {
+    type: String,
+    default: null
   }
 }, {
   timestamps: true,
